@@ -1,5 +1,6 @@
 The following major changes have been made since 0.9.9:
 
+ *) Support building against (but not yet loading into) Linux 6.15-rc1+
  *) Build and link the userspace logger tools with hardening flags, and pass
     distributions' RPM packaging hardening flags to the compiler and linker
  *) lkrg-logctl: Support and report continuation lines (an extra one-character
